[package]
name = "comcigan"
version = "2.0.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/AkiaCode/comcigan-rs"
license = "MIT OR Apache-2.0"
keywords = ["comcigan", "comcigan-parser"]
description = "comcigan web api parsing library"

[dependencies]
encoding_rs = "0.8.30"
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.10.0"
reqwest = { version = "0.11.12", default-features= false, features = ["blocking"] }

[features]
default = []
full = ["blocking", "promise"]
blocking = ["reqwest/blocking"]
promise = ["dep:tokio", "dep:hyper"]

[[test]]
name = "test"
path = "tests/mod.rs"
required-features = ["full"]